RESOLVED FIXED51981
[Qt] [Symbian] Fix building NPAPI support
https://bugs.webkit.org/show_bug.cgi?id=51981
Summary [Qt] [Symbian] Fix building NPAPI support
Laszlo Gombos
Reported 2011-01-05 21:54:42 PST
The build failure reported is the following: compile : WebKit2\Shared\Plugins\Netscape\NetscapePluginModule.cpp "Y:/epoc32/include/mw/QtCore/qsize.h", line 88: Error: #338: more than one instance of overloaded function "operator*" has "C" linkage friend inline const QSize operator*(qreal, const QSize &); ^ "Y:/epoc32/include/mw/QtCore/qsize.h", line 95: Error: #800: this declaration may not have extern "C" linkage Q_DECLARE_TYPEINFO(QSize, Q_MOVABLE_TYPE); ^ It seems that the "C" linkage declaration is not used consistently and the following section of the npapi.h is included both with and without the "C" linkage declaration (depending the ordering of the include files). #if defined(XP_SYMBIAN) #include <QEvent> #include <QRegion> #endif
Attachments
proposed patch (1.16 KB, patch)
2011-01-05 22:11 PST, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2011-01-05 22:11:52 PST
Created attachment 78096 [details] proposed patch
Eric Seidel (no email)
Comment 2 2011-01-10 13:39:11 PST
I'm trying to think who knows npapi.h these days.
Simon Hausmann
Comment 3 2011-01-17 00:07:40 PST
Comment on attachment 78096 [details] proposed patch I think this change is correct. A header file should not rely on extern "C" being set but declare it itself. Plus npapi.h already has the extern "C" declarations a bit further down the file.
WebKit Commit Bot
Comment 4 2011-01-17 00:28:36 PST
Comment on attachment 78096 [details] proposed patch Clearing flags on attachment: 78096 Committed r75925: <http://trac.webkit.org/changeset/75925>
WebKit Commit Bot
Comment 5 2011-01-17 00:28:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.