2011-01-17  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] [Symbian] Fix building NPAPI support
        https://bugs.webkit.org/show_bug.cgi?id=51981

        Make sure that npapi.h is always included outside of the extern "C"
        linkage declaration block.

        No new tests as there is no new functionality.

        * bridge/npruntime.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@75925 bbb929c8-8fbe-4397-9dbb-9b2b20218538