third_party/WebKit/Source/WebCore/bridge/npruntime.h
@@ -34,11 +34,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef _NP_RUNTIME_H_
 #define _NP_RUNTIME_H_
 
+#include "npapi.h"
+
 #ifdef __cplusplus
 extern "C" {
 #endif
-
-#include "npapi.h"
 
 /*
     This API is used to facilitate binding code written in C to script
